修改一些BUG，调整云盘界面

--- a/JiaoBaoYun-hb/html/cloud/app_notes_sub.html
+++ b/JiaoBaoYun-hb/html/cloud/app_notes_sub.html
@@ -45,7 +45,7 @@
 			}
 
 			.mui-table-view-cell {
-				margin-top: 8px;
+				/*margin-top: 8px;*/
 			}
 
 			.mui-media-body {
@@ -70,6 +70,7 @@
 				/*居中*/
 				font-weight: bold;
 				/*加粗*/
+				margin-top: 4px;
 			}
 		</style>
 	</head>
