--- a/JiaoBaoYun-hb/html/cloud/keeprecord_history_sub.html
+++ b/JiaoBaoYun-hb/html/cloud/keeprecord_history_sub.html
@@ -260,7 +260,7 @@
 							if(hisData.length != 0) {
 								mui.toast('没有更多了');
 							} else {
-								mui.toast('获取数据为空');
+								mui.toast('班级历史无记录');
 							}
 						}
 						//						});
