--- a/JiaoBaoYun-hb/html/cloud/storage_upload.html
+++ b/JiaoBaoYun-hb/html/cloud/storage_upload.html
@@ -170,7 +170,7 @@
 
 				//在程序中创建utid的文件夹和对应的上传下载文件夹
 				window.addEventListener('createFolder', function(e) {
-					createFolder();//在程序中创建utid的文件夹和对应的上传下载文件夹
+					createFolder(); //在程序中创建utid的文件夹和对应的上传下载文件夹
 				});
 				//初始化
 				window.addEventListener('init', function(e) {
@@ -212,17 +212,15 @@
 
 				//修改存储到云盘的路径
 				document.getElementById('choose').addEventListener('tap', function() {
-					//					if(pid == '0') {
-					events.fireToPageWithData('storage_main_choose.html', 'init', {
+					var targetPage = plus.webview.getWebviewById('storage_main_choose.html');
+					mui.fire(targetPage, 'init', {
 						fid: subData.fid, //文件id,顶层0
 						showTop: subData.showTop, //是否显示顶部的上传，传输列表，文件夹，如果是选择云盘上的文件夹则为false
 						title: subData.title, //标题名
 						top: subData.top, //顶层文件和文件夹的数据
 						type: '1' //选择文件的方式0，从本地文件1
 					});
-					//					} else {
-					//						plus.webview.getWebviewById('storage_main_choose.html').show('slide-in-right', 250);
-					//					}
+					targetPage.show('slide-in-bottom', 250);
 				});
 
 				//上传选择的文件
