--- a/JiaoBaoYun-hb/html/homework/homework-tea.html
+++ b/JiaoBaoYun-hb/html/homework/homework-tea.html
@@ -20,7 +20,7 @@
 	<body>
 		<header class="mui-bar mui-bar-nav">
 		    <a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
-		    <h1 id="workPage-title" class="display-none">我的作业</h1>
+		    <h1 id="workPage-title" class="mui-title display-none">我的作业</h1>
 		    <div id="workPage-roles" class="switch-mine ">
 		        <div class="switch-handle-mine"></div>
 		    </div>
