1、修改学生作业详情界面 2、重新登录或者注册 首页头像不显示的问题

--- a/JiaoBaoYun-hb/html/homework/homework-commented.html
+++ b/JiaoBaoYun-hb/html/homework/homework-commented.html
@@ -31,8 +31,17 @@
 							<h6 id="homeworkTitle"></h6>
 							<p id="publishDate" class='mui-ellipsis'></p>
 						</div>
+						<div>
+						<hr id="hr"  style="height:1px;border:none;border-top:1px solid #ededed;" />
+					</div>
 						<div class="mui-media-body">
 							<font id="homeWorkContent"></font>
+						</div>
+					</li>
+					<li id="stuHomework" class="mui-table-view-divider">学生答案</li>
+					<li id="stuCell" class="mui-table-view-cell" >
+						<div class="mui-media-body" >
+							<font id="stuResult"></font>
 						</div>
 					</li>
 					<li id="comment" class="mui-table-view-divider">作业评语</li>
