--- a/JiaoBaoYun-hb/html/register/modify_password.html
+++ b/JiaoBaoYun-hb/html/register/modify_password.html
@@ -207,6 +207,9 @@
 									if(data.RspCode == 0) {
 										var tempInfo = window.myStorage.getItem(window.storageKeyName.PERSONALINFO);
 										tempInfo.unick = unickName.value;
+										if(!tempInfo.uimg){
+										tempInfo.uimg = '../../image/utils/default_personalimage.png';
+									}
 										window.myStorage.setItem(window.storageKeyName.PERSONALINFO, tempInfo);
 									}
 								});
