1、修改个人资料 刷新首页 2、首页班级动态当前日期不正确 3、做作业返回时 键盘不消失

--- a/JiaoBaoYun-hb/html/mine/edit-info.html
+++ b/JiaoBaoYun-hb/html/mine/edit-info.html
@@ -70,6 +70,7 @@
 						events.fireToPageNone('mine.html','infoChanged');
 //						events.fireToPageNone('../index/index.html','infoChanged');
 						events.fireToPageNone('classSpace-sub.html','infoChanged');
+						events.fireToPageNone('../quan/tab-zone.html', 'infoChanged');
 						mui.back()
 					}else{
 						mui.toast(data.RspTxt);
