更改上传临时作业界面

--- a/JiaoBaoYun-hb/html/homework/homework-publish.html
+++ b/JiaoBaoYun-hb/html/homework/homework-publish.html
@@ -34,7 +34,7 @@
 			<form class="mui-input-group">
 				<div class="mui-input-row">
 					<label>科目:</label>
-					<select id="subjects">
+					<select id="subjects" class="select-subject">
 					</select>
 				</div>
 				<div class="receive-container">
