--- a/JiaoBaoYun-hb/html/homework/publish-answer.html
+++ b/JiaoBaoYun-hb/html/homework/publish-answer.html
@@ -24,31 +24,38 @@
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
 			<h1 id="title" class="mui-title">上传答案||作业</h1>
 			<a id="checkResult" class="mui-icon iconfont icon-jixiaofenshuchaxun mui-pull-right display-none"></a>
-			<a id="getAnswer" class="mui-icon iconfont icon-xiangji mui-pull-right"></a>
+			<a id="post-imgs" class="mui-pull-right">上传</a>
+			<!--<a id="getAnswer" class="mui-icon iconfont icon-xiangji mui-pull-right"></a>-->
 		</header>
 		<div class="mui-content">
-			<!--表单-->
-			<form class="mui-input-group">
-
-				<p style="text-align: center; ">请上传答案图片，以供学生参考</p>
-				<div id="pictures" class="img-container"></div>
-			</form>
+			
 			<div class="receive-container">
 				<div class="mui-input-row display-none teachers-container">
 					<label>接收人:</label>
-					<select id="receive-teachers">
+					<select id="receive-teachers" class="receive-teachers">
 					</select>
 
 				</div>
 				<!--科目选项-->
 				<div class="mui-input-row display-none subjects-container">
 					<label>科目:</label>
-					<select id="publish-subjects">
+					<select id="publish-subjects" class="publish-subjects">
 
 					</select>
 				</div>
-				<button id='post-imgs' class="mui-btn mui-btn-blue btn-publish ">上传作业</button>
+				<!--<button id='post-imgs' class="mui-btn mui-btn-blue btn-publish ">上传作业</button>-->
 			</div>
+			<!--表单-->
+			<form class="mui-input-group">
+
+				<p id="hint-info" style="text-align: center; ">请上传答案图片，以供学生参考</p>
+				<div id="pictures" class="img-container"></div>
+			</form>
+			<div class="pAnswer-picContainer">
+				<img id="getAnswer" src="../../image/homework/xiangji.png" class="pAnswer-pic"/>
+			</div>
+			
+			
 		</div>
 		<script src="../../js/mui.min.js "></script>
 		<!--公共事件-->
