乱七八糟改

--- a/JiaoBaoYun-hb/html/homework/workdetail-stu.html
+++ b/JiaoBaoYun-hb/html/homework/workdetail-stu.html
@@ -24,7 +24,7 @@
 		    	<span class="subject-icon"></span>
 		    	<div class="brief-words">
 		    		<h5 class='brief-title'></h5>
-		    		<p class="brief-content"></p>
+		    		
 		    		<div class="publish-info">
 		    			<p class="publisher"></p>
 		    			<p class='publish-date mui-pull-right'></p>
@@ -34,7 +34,9 @@
 		    <div class="answer-content">
 		    	<button id="btn-startWork" type="button" class="mui-btn mui-btn-blue mui-pull-right btn-startAn">开始答题</button>
 		    </div>
-		    <div class="homework-detail"></div>
+		    <div class="homework-detail">
+		    	<p class="brief-content"></p>
+		    </div>
 		</div>
 		<script src="../../js/mui.min.js"></script>
 		<script src="../../js/storageKeyName.js" type="text/javascript" charset="utf-8"></script>
