--- a/JiaoBaoYun-hb/html/index/mine.html
+++ b/JiaoBaoYun-hb/html/index/mine.html
@@ -147,6 +147,7 @@
 							break;
 							//关于
 						case 7:
+							mui.toast('施工中,请稍候...');
 //							events.openNewWindow('/html/mine/group-info.html')
 							break;
 
