0004090: 多次切换号码后无法发布作业

--- a/JiaoBaoYun-hb/html/mine/setting.html
+++ b/JiaoBaoYun-hb/html/mine/setting.html
@@ -92,7 +92,7 @@
 											window.myStorage.setItem(window.storageKeyName.PERSONALINFO, null);
 											//清理上传下载的任务和界面
 											events.fireToPageNone('storage_transport.html','removeAllTask');
-											plus.runtime.quit();
+//											plus.runtime.quit();
 											//跳转到登录界面
 											events.openNewWindowWithData('../../html/register/login.html', '');
 										} else {
