1、更改作业详情作业图片 2、首页与我相关添加布置作业的未读 3、布置作业 去重

--- a/JiaoBaoYun-hb/html/homework/homework-commented.html
+++ b/JiaoBaoYun-hb/html/homework/homework-commented.html
@@ -8,6 +8,8 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<link href="../../css/mui.min.css" rel="stylesheet" />
 		<link href="../../css/utils/common.css" rel="stylesheet" />
+		<link href="../../css/iconfont/iconfont.css" rel="stylesheet" />
+		<link href="../../css/homework/subjects-icon.css" rel="stylesheet" />
 		<script src="../../js/mui.min.js"></script>
 		<script src="../../js/storageKeyName.js" type="text/javascript" charset="utf-8"></script>
 		<script src="../../js/publicHomeworkProtocol.js" type="text/javascript" charset="utf-8"></script>
@@ -26,12 +28,15 @@
 			<div class="mui-scroll">
 				<ul id="list" class="mui-table-view">
 					<li class="mui-table-view-cell mui-media">
-						<img id="img" class="mui-media-object mui-pull-left" src="../../image/homework/math.png" />
-						<div class="mui-media-body">
-							<h6 id="homeworkTitle"></h6>
+						<!--<img id="img" class="mui-media-object mui-pull-left"  />-->
+						<img>
+						<span id="img" class=" iconfont subject-icon" style="margin-left: -10px;"></span>
+						</img>
+						<div class="mui-media-body" style="margin-top: -15px;">
+							<h3 id="homeworkTitle"></h3>
 							<p id="publishDate" class='mui-ellipsis'></p>
 						</div>
-						<div>
+						<div style="margin-top: 10px;">
 						<hr id="hr"  style="height:1px;border:none;border-top:1px solid #ededed;" />
 					</div>
 						<div class="mui-media-body">
