临时作业上传答案

--- a/JiaoBaoYun-hb/html/homework/publish-answer.html
+++ b/JiaoBaoYun-hb/html/homework/publish-answer.html
@@ -46,11 +46,10 @@
 				<!--<button id='post-imgs' class="mui-btn mui-btn-blue btn-publish ">上传作业</button>-->
 			</div>
 			<!--表单-->
-			<form class="mui-input-group">
+			
 
-				<p id="hint-info" style="text-align: center; ">请上传答案图片，以供学生参考</p>
-				<div id="pictures" class="img-container"></div>
-			</form>
+				<!--<p id="hint-info" style="text-align: center; ">请上传答案图片，以供学生参考</p>-->
+				<div id="pictures" class="img-container temWork-teaHint"></div>
 			<div class="pAnswer-picContainer">
 				<img id="getAnswer" src="../../image/homework/xiangji.png" class="pAnswer-pic"/>
 			</div>
