--- a/JiaoBaoYun-hb/html/homework/workdetail-stu.html
+++ b/JiaoBaoYun-hb/html/homework/workdetail-stu.html
@@ -17,7 +17,6 @@
 		<header class="mui-bar mui-bar-nav">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
 			<h1 class="mui-title">作业详情</h1>
-			<!--<a class="mui-pull-right">全部作业</a>-->
 		</header>
 		<div class="mui-content">
 		    <div class="homework-brief">
@@ -27,16 +26,16 @@
 		    		
 		    		<div class="publish-info">
 		    			<p class="publisher"></p>
-		    			<p class='publish-date mui-pull-right'></p>
+		    			<p class='publish-date'></p>
 		    		</div>
 		    	</div>
 		    </div>
 		    <div class="answer-content">
-		    	<button id="btn-startWork" type="button" class="mui-btn mui-btn-blue mui-pull-right btn-startAn">开始答题</button>
 		    </div>
 		    <div class="homework-detail">
 		    	<p class="brief-content"></p>
 		    </div>
+		    <button id="btn-startWork" type="button" class="mui-btn btn-startAn">完成作业</button>
 		</div>
 		<script src="../../js/mui.min.js"></script>
 		<script src="../../js/storageKeyName.js" type="text/javascript" charset="utf-8"></script>
