老师作业评论界面

--- a/JiaoBaoYun-hb/html/homework/homework-comment.html
+++ b/JiaoBaoYun-hb/html/homework/homework-comment.html
@@ -23,21 +23,20 @@
 		    	<div class='student-info'>
 		    		<img id="stu-head" class='stuInfo-img'/>
 		    		<div class='stuInfo-words'>
-		    			<h5 id='stu-name'></h5>
+		    			<h5 id='stu-name' class="stu-name"></h5>
 		    			<p id='submit-time'></p>
 		    		</div>
 		    	</div>
 		    	<div id="homework-info" class="homework-info"></div>
 		    </div>
 		    <div class="result-container">
-		    	<h4>作业结果</h4>
+		    	<h6 class="comment-item">作业结果</h6>
 		    	<p id="result-text" class="result-text">
-		
 		    	</p>
 		    </div>
 		    <!--评论区-->
 		    <div class="comment-container">
-	    		<h4>作业评语</h4>
+	    		<h6 class="comment-item">作业评语</h6>
 	    		<textarea id="comment-area" class='comment-area' rows="5" placeholder="请输入评语"></textarea>
 	    		<button id="btn-comment" type="submit" class="mui-btn mui-btn-green btn-submit">提交评论</button>
 		    </div>
