--- a/JiaoBaoYun-hb/html/homework/workdetail-stu.html
+++ b/JiaoBaoYun-hb/html/homework/workdetail-stu.html
@@ -35,7 +35,11 @@
 		    <div class="homework-detail">
 		    	<p class="brief-content"></p>
 		    </div>
-		    <button id="btn-startWork" type="button" class="mui-btn btn-startAn">完成作业</button>
+		    <div class="startWork-container">
+		    	<p class='startWork-hint'>作业需要在线提交，点击完成</p>
+		    	<button id="btn-startWork" type="button" class="mui-btn btn-startAn">完成作业</button>
+		    </div>
+		    
 		</div>
 		<script src="../../js/mui.min.js"></script>
 		<script src="../../js/storageKeyName.js" type="text/javascript" charset="utf-8"></script>
