--- a/JiaoBaoYun-hb/html/index/mine.html
+++ b/JiaoBaoYun-hb/html/index/mine.html
@@ -128,6 +128,10 @@
 							break;
 							//申请加入群
 						case 2:
+						var recordPage=plus.webview.getWebviewById('/html/mine/apply-record.html')
+							if(recordPage){
+								recordPage.reload(true);
+							}
 							events.openNewWindow('/html/mine/apply-record.html');
 							break;
 							//新消息
