--- a/JiaoBaoYun-hb/html/homework/workdetail-tea-sub.html
+++ b/JiaoBaoYun-hb/html/homework/workdetail-tea-sub.html
@@ -37,7 +37,7 @@
 		<nav id="alertBar" class="mui-bar mui-bar-tab" style="visibility: hidden;">
 			<hr   style="margin-top: -1px; height:1px;border:none;border-top:1px solid #ededed;" />
 			<div align="center" style="margin-top: -5px;">
-				<button id="alertAll" type="button" class="mui-btn mui-btn-blue " style="border-radius: 10px;width: 200px;">一键提醒</button>
+				<button id="alertAll" type="button" class="mui-btn mui-btn-blue " style="border-radius: 10px;width: 200px;background-color: #00a5e0;border-color:#00a5e0 ;">一键提醒</button>
 			</div>
 		</nav>
 		<div class="mui-content mui-scroll-wrapper">
@@ -67,7 +67,7 @@
 			<!--<div><img src="../../image/homework/math.png"></img>数学作业</div>-->
 			<!--滑动组件-->
 			<div id="slider" class="mui-slider">
-				<div id="sliderSegmentedControl" class="mui-slider-indicator mui-segmented-control mui-segmented-control-inverted mui-segmented-control-primary" sty>
+				<div id="sliderSegmentedControl" class="mui-slider-indicator mui-segmented-control mui-segmented-control-inverted mui-segmented-control-primary" >
 					<!--已完成选项卡-->
 					<a id="item1" class="mui-control-item mui-active" href="#div-finished">
 						已完成(0)
@@ -77,7 +77,7 @@
 						未完成(0)
 					</a>
 				</div>
-				<div id="sliderProgressBar" class="mui-slider-progress-bar mui-col-xs-6"></div>
+				<div id="sliderProgressBar" class="mui-slider-progress-bar mui-col-xs-6" style="background-color: #00a5e0"></div>
 				<!--滑动内容-->
 				<div class="mui-slider-group">
 					<div id="div-finished" class="mui-slider-item mui-control-content mui-active">
