更改签名长度

--- a/JiaoBaoYun-hb/html/mine/account-info.html
+++ b/JiaoBaoYun-hb/html/mine/account-info.html
@@ -10,6 +10,11 @@
 		<link href="../../css/mui.min.css" rel="stylesheet" />
 		<link href="../../css/utils/common.css" rel="stylesheet" />
 		<link href="../../css/iconfont/iconfont.css" rel="stylesheet" />
+		<style >
+			.signature{
+				max-width: 70%;
+			}
+		</style>
 	</head>
 
 	<body>
@@ -67,7 +72,7 @@
 					</li>-->
 					<li class="mui-table-view-cell mui-media open-newPage" pos='2'>
 						<a href="javascript:;">
-							<p class='mui-pull-right' id="txt">暂无</p>
+							<p class='signature single-line mui-pull-right' id="txt">暂无</p>
 							<div class="mui-media-body">
 								个性签名
 							</div>
